# HeroRobot_HEAD

./: CMakeLists.txt
Algorithm/: CMakeLists.txt  MahonyAHRS.cpp  MahonyAHRS.h
Algorithm/common/: alg_common.h
Algorithm/control/: alg_pid.cpp  alg_pid.h  controller_pid.cpp  controller_pid.h  dji_pid.cpp  dji_pid.h  slidingmodec.cpp  slidingmodec.h
Algorithm/estimation/: QuaternionEKF.cpp  QuaternionEKF.h
Algorithm/filter/: kalman_filter.hpp  low_pass_filter.hpp
Algorithm/math/: alg_math.cpp  alg_math.h  interpolation.hpp
Algorithm/utils/: alg_constrain.cpp  alg_constrain.h  alg_debug.cpp  alg_debug.h  alg_fast_math.cpp  alg_fast_math.h  alg_ols.cpp  alg_ols.h  alg_quantize.hpp  alg_ramp.cpp  alg_ramp.h
App/: AppWiring.cpp  AppWiring.h  CMakeLists.txt  app_booster.cpp  app_booster.h
Board/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F407IGHX_FLASH.ld  STM32F407IGHX_RAM.ld  STMF4.ioc
Board/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Board/Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Board/Middlewares/ARM/DSP/Inc/: arm_math.h
Board/Port/: bsp_can_port_stm32F4.cpp  bsp_spi_port_stm32F4.cpp  bsp_uart_port_stm32F4.cpp  bsp_usb_port_stm32.cpp
Board/USB_DEVICE/App/: usbd_cdc_if.c
Communication/: CMakeLists.txt  CRC.cpp  CRC.h  dvc_mcu_comm.cpp  dvc_mcu_comm.h  dvc_pc_comm.cpp  dvc_pc_comm.h
Device/: CMakeLists.txt  bmi088.cpp  bmi088.h  bmi088_driver.cpp  bmi088_driver.h  bmi088_middleware.cpp  debug_tools.cpp  debug_tools.h  dvc_dr16.cpp  dvc_dr16.h  dvc_vt02.cpp  dvc_vt02.h  dvc_vt03.cpp  dvc_vt03.h  motor_ids.hpp
Device/motors/: dji_c6xx.cpp  dji_c6xx.hpp  dm_mit.cpp  dm_mit.hpp  motor_registry.hpp
Drivers/: CMakeLists.txt  Drivers.md  bsp_dwt.cpp  bsp_dwt.h  bsp_pwm.c  bsp_pwm.h  bsp_pwm_temp.cpp  can_tx_task.cpp  can_tx_task.h  pc_wire_bridge.cpp  pc_wire_bridge.h  spi_tx_task.cpp  spi_tx_task.h  uart_tx_task.cpp  uart_tx_task.h  usb_tx_task.cpp  usb_tx_task.h
Platform/: CMakeLists.txt  Platform.md  bsp_can_port.h  bsp_spi_port.h  bsp_uart_port.h  bsp_usb_port.h
System/: CMakeLists.txt  System.md  system_startup.cpp  system_startup.h
cmake/: DustOptions.cmake
communication_topic/: CommunicationTopic.md  actuator_cmd_topics.hpp  actuator_state_topics.hpp  can_topics.hpp  gimbal_topics.hpp  imu_topics.hpp  mcu_topics.hpp  pc_comm_topics.hpp  pc_control_topics.hpp  rc_control_topics.hpp  spi_topics.hpp  topic.hpp  topic_notify.hpp  topic_pubsub.hpp  topic_wait.hpp  uart_topics.hpp
config/: daplink.cfg  openocd_dap.cfg  openocd_jlink.cfg
daemon_supervisor/: CMakeLists.txt  DaemonSupervisor.md  daemon_client.cpp  daemon_client.hpp  daemon_task.cpp  demo_pc.cpp  supervisor.cpp  supervisor.hpp
